--- a/MyProject/pom.xml
+++ b/MyProject/pom.xml
@@ -29,6 +29,12 @@
 
     <dependency>
       <groupId>com.jfinal</groupId>
+      <artifactId>cos</artifactId>
+      <version>2017.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.jfinal</groupId>
       <artifactId>jfinal-undertow</artifactId>
       <version>1.7</version>
     </dependency>
