--- a/MyProject/pom.xml
+++ b/MyProject/pom.xml
@@ -44,19 +44,21 @@
       <artifactId>jfinal</artifactId>
       <version>4.3</version>
     </dependency>
-<!--easypoi 模块 -->
+  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+  <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>4.1.0</version>
+  </dependency>
     <dependency>
-      <groupId>cn.afterturn</groupId>
-      <artifactId>easypoi-base</artifactId>
-      <version>3.2.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>cn.afterturn</groupId>
-      <artifactId>easypoi-annotation</artifactId>
-      <version>3.2.0</version>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.1.0</version>
     </dependency>
   </dependencies>
+  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+
+
 
   <build>
     <finalName>ExcelDivide</finalName>
