--- a/MyProject/pom.xml
+++ b/MyProject/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>poi-ooxml</artifactId>
       <version>4.1.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 
