--- a/MyProject/pom.xml
+++ b/MyProject/pom.xml
@@ -61,8 +61,15 @@
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/it.sauronsoftware.cron4j/cron4j -->
+    <dependency>
+      <groupId>it.sauronsoftware.cron4j</groupId>
+      <artifactId>cron4j</artifactId>
+      <version>2.2.5</version>
+    </dependency>
   </dependencies>
   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+
 
 
 
